complete bank form

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-  <section>
+  <section class="pt-5 pb-12">
     <div class="container">
-      <div class="pt-5">
+      <div class="">
         <h3 class="text-center lg:hidden font-bold">SOUTH ASIAN FOOTBALL FEDERATION </h3>
         <div class="flex items-center justify-between bg-white">
           <div class="px-5 py-2 bg-black text-white">
@@ -23,42 +23,157 @@
           </div>
         </div>
       </div>
-      <div class="mt-4">
-        <div class="border border-[#8FAADC] p-2 bg-linear-to-t from-[#B5C8E8] to-white shadow-lg">
-          <div class="bg-blue">
-            <h3 class="text-white">Section A: Applicants Details </h3>
+      <div class="mt-8 space-y-8">
+        <div class="form-item">
+          <div class="border border-[#8FAADC] p-2 bg-linear-to-t from-[#B5C8E8] to-white shadow-lg">
+            <div class="bg-blue">
+              <h3 class="text-white px-2">Section A: Applicants Details </h3>
+            </div>
           </div>
+          <form action="#" class="mt-4">
+            <table class="border-collapse border border-gray-400 w-full">
+              <tbody>
+                <tr>
+                  <td class="border border-blue w-1/3 p-2 font-semibold">Name:</td>
+                  <td class="border border-blue w-2/3 p-2 font-semibold">
+                    <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                  </td>
+                </tr>
+                <tr>
+                  <td class="border border-blue w-1/3 p-2 font-semibold">Country :</td>
+                  <td class="border border-blue w-2/3 p-2 font-semibold">
+                    <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                  </td>
+                </tr>
+                <tr>
+                  <td class="border border-blue w-1/3 p-2 font-semibold">Email : </td>
+                  <td class="border border-blue w-2/3 p-2 font-semibold">
+                    <input type="email" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                  </td>
+                </tr>
+                <tr>
+                  <td class="border border-blue w-1/3 p-2 font-semibold">Phone: </td>
+                  <td class="border border-blue w-2/3 p-2 font-semibold">
+                    <input type="tel" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </form>
         </div>
-        <form action="#" class="mt-4">
-          <table class="border-collapse border border-gray-400 w-full">
-            <tbody>
-              <tr>
-                <td class="border border-blue w-1/3 p-2 font-semibold">Name:</td>
-                <td class="border border-blue w-2/3 p-2 font-semibold">
-                  <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
-                </td>
-              </tr>
-              <tr>
-                <td class="border border-blue w-1/3 p-2 font-semibold">Country :</td>
-                <td class="border border-blue w-2/3 p-2 font-semibold">
-                  <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
-                </td>
-              </tr>
-              <tr>
-                <td class="border border-blue w-1/3 p-2 font-semibold">Email : </td>
-                <td class="border border-blue w-2/3 p-2 font-semibold">
-                  <input type="email" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
-                </td>
-              </tr>
-              <tr>
-                <td class="border border-blue w-1/3 p-2 font-semibold">Phone: </td>
-                <td class="border border-blue w-2/3 p-2 font-semibold">
-                  <input type="tel" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
-                </td>
-              </tr>
-            </tbody>
-          </table>
+        <div class="form-item">
+          <div class="border border-[#8FAADC] p-2 bg-linear-to-t from-[#B5C8E8] to-white shadow-lg">
+            <div class="bg-blue">
+              <h3 class="text-white px-2">Section B: Bank Details Information</h3>
+            </div>
+          </div>
+          <form action="#" class="mt-4">
+            <table class="border-collapse border border-gray-400 w-full">
+              <tbody>
+                <tr>
+                  <td class="border border-blue w-1/3 p-2 font-semibold">Name of Beneficiary:</td>
+                  <td class="border border-blue w-2/3 p-2 font-semibold">
+                    <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                  </td>
+                </tr>
+                <tr>
+                  <td class="border border-blue w-1/3 p-2 font-semibold">Bank Name:</td>
+                  <td class="border border-blue w-2/3 p-2 font-semibold">
+                    <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                  </td>
+                </tr>
+                <tr>
+                  <td class="border border-blue w-1/3 p-2 font-semibold">Bank Address: </td>
+                  <td class="border border-blue w-2/3 p-2 font-semibold">
+                    <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                  </td>
+                </tr>
+                <tr>
+                  <td class="border border-blue w-1/3 p-2 font-semibold">Account No: </td>
+                  <td class="border border-blue w-2/3 p-2 font-semibold">
+                    <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                  </td>
+                </tr>
+                <tr>
+                  <td class="border border-blue w-1/3 p-2 font-semibold">IBAN No: </td>
+                  <td class="border border-blue w-2/3 p-2 font-semibold">
+                    <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                  </td>
+                </tr>
+                <tr>
+                  <td class="border border-blue w-1/3 p-2 font-semibold">Swift Code : </td>
+                  <td class="border border-blue w-2/3 p-2 font-semibold">
+                    <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                  </td>
+                </tr>
+                <tr>
+                  <td class="border border-blue w-1/3 p-2 font-semibold"></td>
+                  <td class="border border-blue w-2/3 p-2 font-semibold">
+                    <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </form>
+        </div>
+        <div class="form-item">
+          <div class="border border-[#8FAADC] p-2 bg-linear-to-t from-[#B5C8E8] to-white shadow-lg">
+            <div class="bg-blue">
+              <h3 class="text-white px-2 flex items-center gap-2 flex-wrap py-1">CORRESPONDENT OR INTERMEDIARY BANK DETAILS <span class="bg-yellow-300 text-red-500 text-sm sm:text-lg">(IF ANY)</span> </h3>
+            </div>
+          </div>
+          <form action="#" class="mt-4">
+            <table class="border-collapse border border-gray-400 w-full">
+              <tbody>
+                <tr>
+                  <td class="border border-blue w-1/3 p-2 font-semibold">Name:</td>
+                  <td class="border border-blue w-2/3 p-2 font-semibold">
+                    <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                  </td>
+                </tr>
+                <tr>
+                  <td class="border border-blue w-1/3 p-2 font-semibold">Country :</td>
+                  <td class="border border-blue w-2/3 p-2 font-semibold">
+                    <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                  </td>
+                </tr>
+                <tr>
+                  <td class="border border-blue w-1/3 p-2 font-semibold">Email : </td>
+                  <td class="border border-blue w-2/3 p-2 font-semibold">
+                    <input type="email" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                  </td>
+                </tr>
+                <tr>
+                  <td class="border border-blue w-1/3 p-2 font-semibold">Phone: </td>
+                  <td class="border border-blue w-2/3 p-2 font-semibold">
+                    <input type="tel" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </form>
+        </div>
+        <div class="bg-[#F6AD8D] px-4 py-2">
+          <p class="">NOTE: <span class=" font-bold">IF bank account information provided are incorrect or incomplete resulting in rejection from the bank, all bank charges for remittance of rejected telegraphic transfers will be borne by beneficiary.</span></p>
+        </div>
+        <form action="#" class="flex items-center justify-between flex-wrap md:flex-nowrap gap-5">
+          <div class="flex items-center w-full">
+            <label for="#">Name:</label>
+            <input type="text" class="w-full border-b focus:outline-0 px-2">
+          </div>
+          <div class="flex items-center w-full">
+            <label for="#">Date:</label>
+            <input type="date" class="w-full border-b focus:outline-0 px-2">
+          </div>
+          <div class="flex items-center w-full">
+            <label for="#">Signature:</label>
+            <input type="text" class="w-full border-b focus:outline-0 px-2">
+          </div>
         </form>
+        <div class="w-full max-w-[450px] mx-auto border-4 border-[#E5E5E5] px-2 py-1">
+          <p>South Asian Football Federation – Banani 11- Dhaka 1213</p>
+          <p>Email: <a href="mailto:info@saffederation.org">info@saffederation.org</a> </p>
+        </div>
       </div>
     </div>
   </section>
