--- a/index.html
+++ b/index.html
@@ -163,18 +163,22 @@
           </div>
           <div class="flex items-center w-full">
             <label for="#">Date:</label>
-            <input type="date" class="w-full border-b focus:outline-0 px-2">
+            <input type="date" class="datepicker appearance-none w-full border-b focus:outline-0 px-2">
           </div>
           <div class="flex items-center w-full">
             <label for="#">Signature:</label>
             <input type="text" class="w-full border-b focus:outline-0 px-2">
           </div>
         </form>
+        <form action="#" class="flex items-center justify-center">
+          <button type="submit" class="cursor-pointer bg-[#364EA1] px-6 py-3 text-white rounded-sm text-xl font-semibold">Submit</button>
+        </form>
         <div class="w-full max-w-[450px] mx-auto border-4 border-[#E5E5E5] px-2 py-1">
           <p>South Asian Football Federation – Banani 11- Dhaka 1213</p>
           <p>Email: <a href="mailto:info@saffederation.org">info@saffederation.org</a> </p>
         </div>
       </div>
+      <a href="travel-claim.html">travel claim</a>
     </div>
   </section>
   <script type="module" src="/src/main.js"></script>
