--- a/index.html
+++ b/index.html
@@ -161,9 +161,13 @@
             <label for="#">Name:</label>
             <input type="text" class="w-full border-b focus:outline-0 px-2">
           </div>
-          <div class="flex items-center w-full">
+          <div class=" flex items-center w-full">
             <label for="#">Date:</label>
-            <input type="date" class="datepicker appearance-none w-full border-b focus:outline-0 px-2">
+            <div class="date-wrapper w-full">
+              <input type="date" id="myDate" class="datepicker appearance-none w-full border-b focus:outline-0 px-2">
+              <span class="calendar-icon" onclick="document.getElementById('myDate').showPicker()"></span>
+            </div>
+            
           </div>
           <div class="flex items-center w-full">
             <label for="#">Signature:</label>
