--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
   <section class="pt-5 pb-12">
     <div class="container">
       <div class="">
-        <h3 class="text-center lg:hidden font-bold">SOUTH ASIAN FOOTBALL FEDERATION </h3>
+        <h3 class="text-center lg:hidden font-bold mb-2">SOUTH ASIAN FOOTBALL FEDERATION </h3>
         <div class="flex items-center justify-between bg-white">
           <div class="px-5 py-2 bg-black text-white">
             <h5>Bank Account Information </h5>
           </div>
           <h3 class="hidden lg:block font-bold">SOUTH ASIAN FOOTBALL FEDERATION </h3>
-          <div class="max-w-16">
+          <div class="max-w-12 sm:max-w-16">
             <img src="./src/assets/logo/logo.png" alt="logo">
           </div>
         </div>
       </div>
-      <div class="mt-8 space-y-8">
+      <div class="mt-4 sm:mt-8 space-y-6 sm:space-y-8">
         <div class="form-item">
           <div class="border border-[#8FAADC] p-2 bg-linear-to-t from-[#B5C8E8] to-white shadow-lg">
             <div class="bg-blue">
@@ -175,7 +175,7 @@
           </div>
         </form>
         <form action="#" class="flex items-center justify-center">
-          <button type="submit" class="cursor-pointer bg-[#364EA1] px-6 py-3 text-white rounded-sm text-xl font-semibold">Submit</button>
+          <button type="submit" class="cursor-pointer bg-[#364EA1] px-6 py-2 sm:py-3 text-white rounded-sm text-lg sm:text-xl font-semibold">Submit</button>
         </form>
         <div class="w-full max-w-[450px] mx-auto border-4 border-[#E5E5E5] px-2 py-1">
           <p>South Asian Football Federation – Banani 11- Dhaka 1213</p>
