--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <tr>
                   <td class="border border-blue w-1/3 p-2 font-semibold">Phone: </td>
                   <td class="border border-blue w-2/3 p-2 font-semibold">
-                    <input type="tel" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                    <input type="tel" maxlength="11" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
                   </td>
                 </tr>
               </tbody>
@@ -126,27 +126,15 @@
             <table class="border-collapse border border-gray-400 w-full">
               <tbody>
                 <tr>
-                  <td class="border border-blue w-1/3 p-2 font-semibold">Name:</td>
+                  <td class="border border-blue w-1/3 p-2 font-semibold">Account No: </td>
                   <td class="border border-blue w-2/3 p-2 font-semibold">
                     <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
                   </td>
                 </tr>
                 <tr>
-                  <td class="border border-blue w-1/3 p-2 font-semibold">Country :</td>
+                  <td class="border border-blue w-1/3 p-2 font-semibold">Bank Address: </td>
                   <td class="border border-blue w-2/3 p-2 font-semibold">
                     <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
-                  </td>
-                </tr>
-                <tr>
-                  <td class="border border-blue w-1/3 p-2 font-semibold">Email : </td>
-                  <td class="border border-blue w-2/3 p-2 font-semibold">
-                    <input type="email" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
-                  </td>
-                </tr>
-                <tr>
-                  <td class="border border-blue w-1/3 p-2 font-semibold">Phone: </td>
-                  <td class="border border-blue w-2/3 p-2 font-semibold">
-                    <input type="tel" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
                   </td>
                 </tr>
               </tbody>
