--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./src/style.css">
   <title>Saff Form</title>
 </head>
 
@@ -18,9 +19,9 @@
             <h5>Bank Account Information </h5>
           </div>
           <h3 class="hidden lg:block font-bold">SOUTH ASIAN FOOTBALL FEDERATION </h3>
-          <div class="max-w-12 sm:max-w-16">
+          <a href="protal.html" class="max-w-12 sm:max-w-16">
             <img src="./src/assets/logo/logo.png" alt="logo">
-          </div>
+          </a>
         </div>
       </div>
       <div class="mt-4 sm:mt-8 space-y-6 sm:space-y-8">
@@ -36,25 +37,25 @@
                 <tr>
                   <td class="border border-blue w-1/3 p-2 font-semibold">Name:</td>
                   <td class="border border-blue w-2/3 p-2 font-semibold">
-                    <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                    <input type="text" required class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
                   </td>
                 </tr>
                 <tr>
                   <td class="border border-blue w-1/3 p-2 font-semibold">Country :</td>
                   <td class="border border-blue w-2/3 p-2 font-semibold">
-                    <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                    <input type="text" required class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
                   </td>
                 </tr>
                 <tr>
                   <td class="border border-blue w-1/3 p-2 font-semibold">Email : </td>
                   <td class="border border-blue w-2/3 p-2 font-semibold">
-                    <input type="email" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                    <input type="email" required class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
                   </td>
                 </tr>
                 <tr>
                   <td class="border border-blue w-1/3 p-2 font-semibold">Phone: </td>
                   <td class="border border-blue w-2/3 p-2 font-semibold">
-                    <input type="tel" maxlength="11" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                    <input type="tel" required maxlength="11" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
                   </td>
                 </tr>
               </tbody>
@@ -73,43 +74,25 @@
                 <tr>
                   <td class="border border-blue w-1/3 p-2 font-semibold">Name of Beneficiary:</td>
                   <td class="border border-blue w-2/3 p-2 font-semibold">
-                    <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                    <input type="text" required class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
                   </td>
                 </tr>
                 <tr>
                   <td class="border border-blue w-1/3 p-2 font-semibold">Bank Name:</td>
                   <td class="border border-blue w-2/3 p-2 font-semibold">
-                    <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                    <input type="text" required class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
                   </td>
                 </tr>
                 <tr>
                   <td class="border border-blue w-1/3 p-2 font-semibold">Bank Address: </td>
                   <td class="border border-blue w-2/3 p-2 font-semibold">
-                    <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
-                  </td>
-                </tr>
-                <tr>
-                  <td class="border border-blue w-1/3 p-2 font-semibold">Account No: </td>
-                  <td class="border border-blue w-2/3 p-2 font-semibold">
-                    <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
-                  </td>
-                </tr>
-                <tr>
-                  <td class="border border-blue w-1/3 p-2 font-semibold">IBAN No: </td>
-                  <td class="border border-blue w-2/3 p-2 font-semibold">
-                    <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
-                  </td>
-                </tr>
-                <tr>
-                  <td class="border border-blue w-1/3 p-2 font-semibold">Swift Code : </td>
-                  <td class="border border-blue w-2/3 p-2 font-semibold">
-                    <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                    <input type="text" required class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
                   </td>
                 </tr>
                 <tr>
                   <td class="border border-blue w-1/3 p-2 font-semibold"></td>
                   <td class="border border-blue w-2/3 p-2 font-semibold">
-                    <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                    <input type="text" required class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
                   </td>
                 </tr>
               </tbody>
@@ -117,6 +100,34 @@
           </form>
         </div>
         <div class="form-item">
+          
+          <form action="#" class="mt-4">
+            <table class="border-collapse border border-gray-400 w-full">
+              <tbody>
+                <tr>
+                  <td class="border border-blue w-1/3 p-2 font-semibold">Account No: </td>
+                  <td class="border border-blue w-2/3 p-2 font-semibold">
+                    <input type="text" required class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                  </td>
+                </tr>
+                <tr>
+                  <td class="border border-blue w-1/3 p-2 font-semibold">IBAN No: </td>
+                  <td class="border border-blue w-2/3 p-2 font-semibold">
+                    <input type="text" required class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                  </td>
+                </tr>
+                <tr>
+                  <td class="border border-blue w-1/3 p-2 font-semibold">Swift Code : </td>
+                  <td class="border border-blue w-2/3 p-2 font-semibold">
+                    <input type="text" required class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </form>
+        </div>
+        <div class="form-item">
+          <h6 class="font-bold pl-5 pb-1">Additional Info</h6>
           <div class="border border-[#8FAADC] p-2 bg-linear-to-t from-[#B5C8E8] to-white shadow-lg">
             <div class="bg-blue">
               <h3 class="text-white px-2 flex items-center gap-2 flex-wrap py-1">CORRESPONDENT OR INTERMEDIARY BANK DETAILS <span class="bg-yellow-300 text-red-500 text-sm sm:text-lg">(IF ANY)</span> </h3>
@@ -128,13 +139,13 @@
                 <tr>
                   <td class="border border-blue w-1/3 p-2 font-semibold">Account No: </td>
                   <td class="border border-blue w-2/3 p-2 font-semibold">
-                    <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                    <input type="text" required class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
                   </td>
                 </tr>
                 <tr>
                   <td class="border border-blue w-1/3 p-2 font-semibold">Bank Address: </td>
                   <td class="border border-blue w-2/3 p-2 font-semibold">
-                    <input type="text" class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
+                    <input type="text" required class="w-full border border-[#8FAADC] px-2 py-1 bg-linear-to-bl from-[#90ABDC] via-white to-[#90ABDC] focus:outline-0">
                   </td>
                 </tr>
               </tbody>
@@ -147,7 +158,7 @@
         <form action="#" class="flex items-center justify-between flex-wrap md:flex-nowrap gap-5">
           <div class="flex items-center w-full">
             <label for="#">Name:</label>
-            <input type="text" class="w-full border-b focus:outline-0 px-2">
+            <input type="text" required class="w-full border-b focus:outline-0 px-2">
           </div>
           <div class=" flex items-center w-full">
             <label for="#">Date:</label>
@@ -159,21 +170,20 @@
           </div>
           <div class="flex items-center w-full">
             <label for="#">Signature:</label>
-            <input type="text" class="w-full border-b focus:outline-0 px-2">
+            <input type="text" required class="w-full border-b focus:outline-0 px-2">
           </div>
         </form>
         <form action="#" class="flex items-center justify-center">
-          <button type="submit" class="cursor-pointer bg-[#364EA1] px-6 py-2 sm:py-3 text-white rounded-sm text-lg sm:text-xl font-semibold">Submit</button>
+          <button type="submit" class="cursor-pointer bg-blue-light transition hover:bg-blue-light/80 px-6 py-2 sm:py-3 text-white rounded-sm text-lg sm:text-xl font-semibold">Submit</button>
         </form>
         <div class="w-full max-w-[450px] mx-auto border-4 border-[#E5E5E5] px-2 py-1">
           <p>South Asian Football Federation – Banani 11- Dhaka 1213</p>
-          <p>Email: <a href="mailto:info@saffederation.org">info@saffederation.org</a> </p>
+          <p>Email: <a class="text-blue-500 underline" href="mailto:info@saffederation.org">info@saffederation.org</a> </p>
         </div>
       </div>
-      <a href="travel-claim.html">travel claim</a>
     </div>
   </section>
-  <script type="module" src="/src/main.js"></script>
+  <script type="module" src="./src/main.js"></script>
 </body>
 
 </html>
