--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <h6 class="font-bold pl-5 pb-1">Additional Info</h6>
           <div class="border border-[#8FAADC] p-2 bg-linear-to-t from-[#B5C8E8] to-white shadow-lg">
             <div class="bg-blue">
-              <h3 class="text-white px-2 flex items-center gap-2 flex-wrap py-1">CORRESPONDENT OR INTERMEDIARY BANK DETAILS <span class="bg-yellow-300 text-red-500 text-sm sm:text-lg">(IF ANY)</span> </h3>
+              <h3 class="text-white px-2 md:flex items-center gap-2 flex-wrap py-1">CORRESPONDENT OR INTERMEDIARY BANK DETAILS <span class="bg-yellow-300 text-red-500 text-sm sm:text-lg">(IF ANY)</span> </h3>
             </div>
           </div>
           <form action="#" class="mt-4">
