--- a/protal.html
+++ b/protal.html
@@ -18,7 +18,7 @@
                 <img src="./src/assets/logo/login-logo.png" alt="logo">
             </a>
             <h3 class="text-center">Portal unlocks with two options:</h3>
-            <div class="mt-8 flex items-center justify-center gap-2">
+            <div class="mt-8 flex flex-col md:flex-row items-center justify-center gap-2">
                 <div class="btn-wrap">
                     <a href="travel-claim.html" class="bg-blue text-white text-lg sm:text-xl font-medium px-6 py-2 rounded-lg" >Travel Claim Form</a>
                 </div>
