--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
         <div
             class="w-full max-w-80 bg-white shadow-md border border-[#c3c4c7] p-8 h-max max-h-[90vh] overflow-y-auto scrollbar-hide">
             <!-- Logo -->
-            <a href="protal.html" class="flex flex-col items-center mb-6">
+            <a href="portal.html" class="flex flex-col items-center mb-6">
                 <img src="./src/assets/logo/login-logo.png" alt="logo">
             </a>
             <form action="">
