--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h5>Bank Account Information </h5>
           </div>
           <h3 class="hidden lg:block font-bold">SOUTH ASIAN FOOTBALL FEDERATION </h3>
-          <a href="protal.html" class="max-w-12 sm:max-w-16">
+          <a href="portal.html" class="max-w-12 sm:max-w-16">
             <img src="./src/assets/logo/logo.png" alt="logo">
           </a>
         </div>
