--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           </form>
         </div>
         <div class="bg-[#F6AD8D] px-4 py-2">
-          <p class="">NOTE: <span class=" font-bold">IF bank account information provided are incorrect or incomplete resulting in rejection from the bank, all bank charges for remittance of rejected telegraphic transfers will be borne by beneficiary.</span></p>
+          <p class="">NOTE: <span class="text-sm sm:text-base font-bold">IF bank account information provided are incorrect or incomplete resulting in rejection from the bank, all bank charges for remittance of rejected telegraphic transfers will be borne by beneficiary.</span></p>
         </div>
         <form action="#" class="flex items-center justify-between flex-wrap md:flex-nowrap gap-5">
           <div class="flex items-center w-full">
