--- a/login.html
+++ b/login.html
@@ -32,10 +32,9 @@
                         class="absolute cursor-pointer w-5 h-5 top-1/2 right-0 -translate-y-1/2 text-[#2271b1]">
                         <span class="relative dashicon font-dashicon"></span>
                     </button>
-
                 </div>
 
-                <button type="submit" class="w-full bg-[#2271b1] transition-all hover:bg-blue text-white py-2 rounded">
+                <button type="submit" class="w-full bg-[#2271b1] transition-all hover:bg-blue text-white py-2 rounded cursor-pointer">
                     Log In
                 </button>
             </form>
