--- a/travel-claim.html
+++ b/travel-claim.html
@@ -284,7 +284,7 @@
           <button type="submit" class="cursor-pointer bg-blue-light transition hover:bg-blue-light/80 px-6 py-2 sm:py-3 text-white rounded-sm text-lg sm:text-xl font-semibold">Submit</button>
         </form>
         <div class="bg-[#F6AD8D] px-4 py-2">
-          <p class="">Please Note: <span class=" font-bold"> If received by cash, a separate confirmation form will be provided which must be filled and signed.</span></p>
+          <p class="">Please Note: <span class="text-sm sm:text-base font-bold"> If received by cash, a separate confirmation form will be provided which must be filled and signed.</span></p>
         </div>
         <div class="w-full max-w-[450px] mx-auto border-4 border-[#E5E5E5] px-2 py-1">
           <p>South Asian Football Federation – Banani 11- Dhaka 1213</p>
