update logo image

--- a/login.html
+++ b/login.html
@@ -11,12 +11,12 @@
 </head>
 
 <body class="">
-    <div class=" min-h-screen flex items-center justify-center">
+    <div class=" min-h-screen flex items-center justify-center px-2">
         <div
             class="w-full max-w-80 bg-white shadow-md border border-[#c3c4c7] p-8 h-max max-h-[90vh] overflow-y-auto scrollbar-hide">
             <!-- Logo -->
-            <a href="portal.html" class="flex flex-col items-center mb-6">
-                <img src="./src/assets/logo/login-logo.png" alt="logo">
+            <a href="https://saffederation.org/" class="flex flex-col items-center mb-6 w-full max-w-28 sm:max-w-[184px] mx-auto">
+                <img src="./src/assets/logo/logo.svg" alt="logo">
             </a>
             <form action="">
 
@@ -27,9 +27,9 @@
                 <label class="text-sm font-medium text-gray-700">Password</label>
                 <div class="relative mt-1 mb-4">
                     <input id="password" required type="password"
-                        class="w-full pl-3 pr-6 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-400" />
-                    <button id="password-btn"
-                        class="absolute cursor-pointer w-5 h-5 top-1/2 right-0 -translate-y-1/2 text-[#2271b1]">
+                        class="w-full pl-3 pr-6 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-400 password-input" />
+                    <button id="password-btn" type="button"
+                        class="absolute cursor-pointer w-5 h-5 top-1/2 right-0 -translate-y-1/2 text-[#2271b1] appearance-none ">
                         <span class="relative dashicon font-dashicon"></span>
                     </button>
                 </div>
