--- a/portal.html
+++ b/portal.html
@@ -9,13 +9,13 @@
 </head>
 
 <body class="">
-    <div class=" min-h-screen flex items-center justify-center">
+    <div class=" min-h-screen flex items-center justify-center px-2">
         
         <div
             class="w-full max-w-[600px] bg-white shadow-md border border-[#c3c4c7] p-8 h-max max-h-[90vh] overflow-y-auto scrollbar-hide">
             <!-- Logo -->
-            <a href="#" class="flex flex-col items-center mb-6">
-                <img src="./src/assets/logo/login-logo.png" alt="logo">
+            <a href="https://saffederation.org/" class="flex flex-col items-center mb-6 w-full max-w-28 sm:max-w-[184px] mx-auto">
+                <img src="./src/assets/logo/logo.svg" alt="logo">
             </a>
             <h3 class="text-center">Portal unlocks with two options:</h3>
             <div class="mt-8 flex flex-col md:flex-row items-center justify-center gap-2 space-y-4 md:space-y-0">
