--- a/travel-claim.html
+++ b/travel-claim.html
@@ -19,8 +19,8 @@
             <h5>TRAVEL CLAIM FORM</h5>
           </div>
           <h3 class="hidden lg:block font-bold">SOUTH ASIAN FOOTBALL FEDERATION </h3>
-          <a href="portal.html" class="max-w-12 sm:max-w-16">
-            <img src="./src/assets/logo/logo.png" alt="logo">
+          <a href="https://saffederation.org/" class="w-full max-w-20 sm:max-w-[184px]">
+            <img src="./src/assets/logo/logo.svg" alt="logo">
           </a>
         </div>
       </div>
